erDiagram
    AUTH_USERS {
        uuid id PK
        string email
        jsonb user_metadata
        timestamptz created_at
    }

    RECIPES {
        string id PK
        string title
        string description
        string ingredients
        int calories
        int proteins
        int fats
        int carbs
        string imageUri
        boolean isFavorite
        string category
        int cookingTime
        timestamptz created_at
        bigint updatedAt
    }

    ANALYSIS_RESULTS {
        uuid id PK
        uuid user_id FK
        string name
        int calories
        float proteins
        float fats
        float carbs
        string image_url
        int weight
        float confidence
        string ai_summary
        string top_predictions
        timestamptz created_at
    }

    BARCODE_PRODUCTS {
        string barcode PK
        uuid user_id FK
        string name
        int calories
        float proteins
        float fats
        float carbs
        int weight
        timestamptz created_at
    }

    FOODS {
        uuid id PK
        string name
        string category
        float calories
        float proteins
        float fats
        float carbs
    }

    STORAGE_OBJECTS {
        uuid id PK
        string bucket_id
        string name
        uuid owner
        timestamptz created_at
    }

    AUTH_USERS ||--o{ ANALYSIS_RESULTS : "owns user_id"
    AUTH_USERS ||--o{ BARCODE_PRODUCTS : "owns user_id"
    AUTH_USERS ||--o{ STORAGE_OBJECTS : "uploads owner"
    RECIPES }o..o| STORAGE_OBJECTS : "imageUri public URL"
